# gigo

./: Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
src/: chat.rs  main.rs  openai.rs
src/api/: apiclient.rs  mod.rs  openaiapiclient.rs
